--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 C:\Users\LukeB\PycharmProjects\CCNA_PY\.idea
-C:\Users\LukeB\PycharmProjects\CCNA_PY\venvs
+C:\Users\LukeB\PycharmProjects\CCNA_PY\venv
